fix(challenge modal): disable draggable on mobile

--- a/src/components/challenge-modal/challenge-modal.module.css
+++ b/src/components/challenge-modal/challenge-modal.module.css
@@ -78,3 +78,9 @@
   filter: var(--filter80);
   text-transform: capitalize;
 }
+
+@media (max-width: 640px) {
+  .title {
+    cursor: default;
+  }
+}
